Add Java environment configuration and backup project files

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -45,7 +45,8 @@
 	"postCreateCommand": "bash .devcontainer/setup.sh",
 
 	"remoteEnv": {
-		"DISPLAY": ":1"
+		"DISPLAY": ":1",
+		"JAVA_HOME": "/home/vscode/.sdkman/candidates/java/current"
 	},
 
 	"remoteUser": "vscode"
