--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
     "java.project.sourcePaths": [
         "Controller/src",
-        "TeamCode/src"
+        "TeamCode/src",
+        "tmp_compile"
+    ],
+    "java.project.referencedLibraries": [
+        "lib/**/*.jar"
     ],
     "java.project.outputPath": "out",
     "java.configuration.updateBuildConfiguration": "automatic",
@@ -9,11 +13,11 @@
     "java.configuration.runtimes": [
         {
             "name": "JavaSE-17",
-            "path": "/home/vscode/.sdkman/candidates/java/current",
+            "path": "~/.sdkman/candidates/java/current",
             "default": true
         }
     ],
-    "java.jdt.ls.java.home": "/home/vscode/.sdkman/candidates/java/current",
+    "java.jdt.ls.java.home": "~/.sdkman/candidates/java/current",
     "files.exclude": {
         "**/.classpath": true,
         "**/.project": true,
