--- a/.devcontainer/devcontainer-orig.json
+++ b/.devcontainer/devcontainer-orig.json
@@ -1,23 +1,18 @@
 {
 	"name": "Virtual Robot Simulator",
-	"image": "mcr.microsoft.com/devcontainers/java:1-21-bullseye",
-
+	"image": "mcr.microsoft.com/devcontainers/base:debian",
+	
 	"features": {
-		"ghcr.io/devcontainers/features/java:1": {
-			"version": "none",
-			"installMaven": "true",
-			"installGradle": "true"
-		},
-		"ghcr.io/ebaskoro/devcontainer-features/sdkman:1": {
-			"candidate": "java",
-			"version": "latest"
-		},
 		"ghcr.io/devcontainers/features/desktop-lite:1": {
 			"version": "latest",
 			"noVncVersion": "1.6.0",
 			"password": "vscode",
 			"webPort": "6080",
 			"vncPort": "5901"
+		},
+		"ghcr.io/ebaskoro/devcontainer-features/sdkman:1": {
+			"candidate": "java",
+			"version": "latest"
 		}
 	},
 
