--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,11 +13,11 @@
     "java.configuration.runtimes": [
         {
             "name": "JavaSE-17",
-            "path": "~/.sdkman/candidates/java/current",
+            "path": "/usr/local/sdkman/candidates/java/current",
             "default": true
         }
     ],
-    "java.jdt.ls.java.home": "~/.sdkman/candidates/java/current",
+    "java.jdt.ls.java.home": "/usr/local/sdkman/candidates/java/current",
     "files.exclude": {
         "**/.classpath": true,
         "**/.project": true,
