--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,6 @@
 {
-    "java.project.sourcePaths": [
-        "Controller/src",
-        "TeamCode/src",
-        "tmp_compile"
-    ],
-    "java.project.referencedLibraries": [
-        "lib/**/*.jar"
-    ],
-    "java.project.outputPath": "out",
+    "java.import.gradle.enabled": true,
+    "java.import.gradle.wrapper.enabled": true,
     "java.configuration.updateBuildConfiguration": "automatic",
     "java.debug.settings.forceBuildBeforeLaunch": true,
     "java.configuration.runtimes": [
