--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,6 +2,25 @@
     "version": "2.0.0",
     "tasks": [
         {
+            "label": "gradle-build",
+            "type": "shell",
+            "command": "./gradlew build --no-daemon",
+            "options": {
+                "env": {
+                    "JAVA_HOME": "/usr/local/sdkman/candidates/java/17.0.13.fx-librca"
+                }
+            },
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "presentation": {
+                "reveal": "silent",
+                "panel": "shared"
+            },
+            "problemMatcher": []
+        },
+        {
             "label": "Verify Java Installation",
             "type": "shell",
             "command": "java -version && echo '' && echo 'JavaFX Modules:' && java --list-modules | grep javafx",
